<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_marginTop="@dimen/v_margin"
    android:layout_marginLeft="@dimen/h_margin"
    android:layout_marginRight="@dimen/h_margin"
    android:layout_marginBottom="@dimen/v_margin">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="10dp"
        android:text="@string/header"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center" />

    <Button
        android:text="@string/b1"
        android:id="@+id/button1"
        style="@style/ButtonStyle"/>

    <Button
        android:text="@string/b2"
        android:id="@+id/button2"
        style="@style/ButtonStyle"/>

    <Button
        android:text="@string/b3"
        android:id="@+id/button3"
        style="@style/ButtonStyle"/>

    <Button
        android:text="@string/b4"
        android:id="@+id/button4"
        style="@style/ButtonStyle"/>

    <Button
        android:text="@string/b5"
        android:id="@+id/button5"
        style="@style/ButtonStyle"/>

    <Button
        android:text="@string/b6"
        android:id="@+id/button6"
        style="@style/ButtonStyle"/>

</LinearLayout>
